--- a/.gitattributes
+++ b/.gitattributes
@@ -1,22 +1,53 @@
-# Auto detect text files and perform LF normalization
-* text=auto
 
-# Custom for Visual Studio
-*.cs     diff=csharp
-*.sln    merge=union
-*.csproj merge=union
-*.vbproj merge=union
-*.fsproj merge=union
-*.dbproj merge=union
-
-# Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Forprosjektrapport, gruppe 29</title>
+	<link rel="stylesheet"
+	title="Kaffe"
+	href="kaffestil.css">
+</head>
+<body>
+<article>
+	<header>
+		<h1>Forprosjektrapport, gruppe 29 </h1>
+		<h2>- en nettside om kaffe</h2>
+		<br>
+	</header>
+<h3>En uformell beskrivelse av alle "use cases":</h3>
+	<p><ul>
+		<li>Lære om hvorfor man bør drikke kaffe</li>
+		<li>Lære om ulike tilberedningsmetoder</li>
+		<li>Lære om kaffedrikking i Norge</li>
+	</ul></p>
+<h3>Prototype av grensesnittet</h3>
+	<p>...en beskrivelse/skisse...</p>
+<h3>Fordeling av arbeidsoppgaver</h3>
+	<p>Kristoffer Johansen:...</p>
+	<p>Kristoffer Osen:...</p>
+	<p>Christer Bang:...</p>
+	<p>Hege Grostad:...</p>
+<h3>Milepælsplan:</h3>
+	<p><ul>
+		<li>Valg av innhold innen 29. okt</li>
+		<li>Grunnleggende html ferdig innen...</li>
+		<li>....ferdig innen...</li>
+		<li>....ferdig innen...</li>
+	</ul></p>
+<h3>Teknologier vi har vurdert å bruke:</h3>
+	<p><ul>
+		<li>...</li>
+		<li>...</li>
+	</ul></p>
+<h3>Teknologier vi har valgt å bruke:</h3>
+	<p><ul>
+		<li>...</li>
+		<li>...</li>
+	</ul></p>
+<h3>Git/Github</h3>
+	<p>Vi har valgt å bruke github fordi github er et verktøy som er skreddersydd for å skrive kode.
+	</p>
+</article>
+</body>
+</html>
